--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langchain = "^0.3.13"
 langchain-anthropic = "^0.3.1"
 langchain-openai = "^0.2.14"
 langgraph = "^0.2.60"
+nbformat = "^5.10.4"
 traitlets = "^5.14.3"
 typing-extensions = "^4.12.2"
 
