--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,17 @@ readme = "README.md"
 python = "^3.11"
 
 cycler = "^0.12.1"
+fastapi = { version = "^0.115.6", extras = ["standard"] }
 ipykernel = "^6.29.5"
 langchain = "^0.3.13"
 langchain-anthropic = "^0.3.1"
 langchain-openai = "^0.2.14"
 langgraph = "^0.2.60"
 nbformat = "^5.10.4"
+python-socketio = "^5.12.1"
 traitlets = "^5.14.3"
 typing-extensions = "^4.12.2"
+websockets = "^14.1"
 
 [build-system]
 requires = ["poetry-core"]
