--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ langchain-anthropic = "^0.3.1"
 langchain-openai = "^0.2.14"
 langgraph = "^0.2.60"
 nbformat = "^5.10.4"
+pydantic = "^2.10.4"
+pydantic-settings = "^2.7.1"
 python-socketio = "^5.12.1"
+structlog = "^24.4.0"
 traitlets = "^5.14.3"
 typing-extensions = "^4.12.2"
 websockets = "^14.1"
